# accessible-media-editor

./: .gitignore  AccessibleMediaEditor.spec  CLAUDE.md  README.md  main.py  pyproject.toml
core/: __init__.py  _secrets.example.py  announce.py  app_info.py  audio_player.py  batch_manager.py  conversion.py  cue.py  debug_session.py  episode_parse.py  error_report.py  ffmpeg_helpers.py  formatting.py  i18n.py  logger.py  merge.py  metadata_edit.py  probe.py  segment_export.py  segments.py  silence.py  single_instance.py  smart_cut.py  speech.py  support.py  track_settings.py  updater.py
installer/: AccessibleMediaEditor.iss
locales/: base.pot
locales/fr/LC_MESSAGES/: base.po
release-notes/: v0.1.0.en.md  v0.1.0.fr.md
scripts/: build_release.ps1  manage_i18n.py  update_embedded_ffmpeg.ps1
tests/: test_episode_parse.py  test_export_integration.py  test_ffmpeg_helpers.py  test_segments.py
ui/: __init__.py  announcement_dialog.py  host.py  preferences_dialog.py  segment_editor.py  settings_dialog.py  support_dialog.py  update_dialog.py  welcome_frame.py
